[gd_scene load_steps=4 format=2]

[ext_resource path="res://objects/collectables/itembubble.png" type="Texture" id=1]
[ext_resource path="res://objects/collectables/ItemBubble.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12, 12 )

[node name="ItemBubble" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="ItemSprite" type="Sprite" parent="Sprite"]
show_behind_parent = true

[node name="Hitbox" type="Area2D" parent="." groups=[
"enemy",
]]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 1 )

[node name="MovementTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -1.19209e-07, 1.19209e-07 )
scale = Vector2( 1.2, 1.2 )
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="timeout" from="MovementTimer" to="." method="_on_MovementTimer_timeout"]
